# quantum-circuit-sim

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  plan.md  pyproject.toml  server.js
.github/workflows/: deploy-pages.yml
algorithms/: adapt_qaoa.py  base.py  bell_state.py  bernstein_vazirani.py  deutsch_jozsa.py  error_correction.py  ghz.py  grover.py  ising_evolution.py  ma_qaoa.py  phase_estimation.py  qaoa_maxcut.py  qft.py  rabi.py  teleportation.py  vqe.py
backend/: main.py
backend/api/: router.py  simulation.py
backend/models/: requests.py  responses.py
benchmarks/: bench_scaling.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: algorithms.json  client.js  demo-traces.json
frontend/src/components/: AlgorithmSelector.jsx  AmplitudeChart.jsx  BlochSphere.jsx  CircuitDiagram.jsx  MeasurementHistogram.jsx  NoisePanel.jsx  ObservablesPanel.jsx  ParameterPanel.jsx  PhaseWheel.jsx  StepScrubber.jsx
frontend/src/context/: SimulationContext.jsx
frontend/src/hooks/: useSimulation.js  useStepPlayer.js
simulator/: array_backend.py  circuit.py  circuit_optimizer.py  density_matrix.py  executor.py  gates.py  noise.py  observables.py  sparse_state.py  state_vector.py  tracer.py
tests/: test_algorithms.py  test_circuit.py  test_density_matrix.py  test_executor.py  test_gates.py  test_scaling.py  test_state_vector.py
